corrigido ícone, seção dúvidas e CSS geral

--- a/index.html
+++ b/index.html
@@ -63,25 +63,30 @@
                 <button type="submit" class="btn-draw">SORTEAR<span aria-hidden="true">→</span></button>
             </form>
         </div>
-
         <!-- ==== DÚVIDAS ==== -->
-        <div id="questions" class="questions">
-            <div id="question-1">
-                <img src="./assets/obs.svg" alt="ícone de pessoa respondendo">
-                <p>Como funciona o sorteador de números?</p>
-                <p>O sorteador utiliza um algoritmo de geração aleatória para
-                   criar números dentro do intervalo especificado pelo usuário.
+        <section id="questions" class="questions">
+            <div class="question-item">
+                <div class="question-header">
+                    <img src="./assets/obs.svg" alt="" aria-hidden="true">
+                    <h3>Como funciona o sorteador de números?</h3>
+                </div>
+                <p>
+                O sorteador utiliza um algoritmo de geração aleatória para criar números
+                dentro do intervalo especificado pelo usuário.
                 </p>
             </div>
 
-            <div id="question-2">
-                <img src="./assets/obs.svg" alt="ícone de pessoa respondendo">
-                <p>Posso escolher o intervalo dos números?</p>
-                <p>Sim, você pode definir os valores mínimo e máximo para o
-                   intervalo dos números sorteados.
+            <div class="question-item">
+                <div class="question-header">
+                    <img src="./assets/obs.svg" alt="" aria-hidden="true">
+                    <h3>Posso escolher o intervalo dos números?</h3>
+                </div>
+                <p>
+                Sim, você pode definir os valores mínimo e máximo para o intervalo dos
+                números sorteados.
                 </p>
             </div>
-        </div>
+        </section>
     </main>
     <script src="./scripts.js"></script>
 </body>
