--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <img src="./assets/logo.svg" alt="símbolo da logomarca">
             <h2 class="brand-animated">NUMBERS</h2>
         </div>
-        
+
         <div id="content-title">
             <h3>ONLINE - GRATUITO</h3>
             <h1>SORTEADOR DE NÚMEROS</h1>
@@ -61,6 +61,35 @@
 
                 <button type="submit" class="btn-draw">SORTEAR<span aria-hidden="true">→</span></button>
             </form>
+        </div>
+
+        <!-- ==== RESULTADOS ==== -->
+         <div id="results-area">
+            <div class="results-header">
+                <h2>RESULTADO DO SORTEIO</h2>
+                <p class="results-subtitle"><span id="result-count">1º</span> RESULTADO</p>
+            </div>
+
+            <div id="results-grid" class="results-grid">
+            <!-- slots entram aqui via JS -->
+            <div class="result-slot">
+                <div class="slot-reel">
+                    <div class="slot-track">
+                        <div class="slot-dot"></div>
+                        <div class="slot-dot"></div>
+                        <div class="slot-dot"></div>
+                        <div class="slot-dot"></div>
+                        <div class="slot-dot"></div>
+                        <div class="slot-dot"></div>
+                    </div>
+                </div>
+                <div class="slot-number">23</div>
+            </div>
+            </div>
+
+            <button type="button" class="btn-draw btn-again" id="btn-again" style="display:none;">
+                SORTEAR NOVAMENTE <span aria-hidden="true">↻</span>
+            </button>
         </div>
         <!-- ==== DÚVIDAS ==== -->
         <section id="questions" class="questions">
